[project]
name = "lekiwi-dora"
version = "0.1.0"
description = "Lekiwi dora integration."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
]

[tool.uv.workspace]
members = [
  "packages/dummy_package",
  "packages/lekiwi_sim",
]

[tool.pyright]
exclude = ["crates*", "target*", "packages*"]
include = [
  "packages/dummy_package",
  "packages/lekiwi_sim",
  "packages/lekiwi_teleoperate",
]
