[project]
name = "lekiwi"
version = "0.1.0"
description = "Lekiwi robot software stack."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "lekiwi_lerobot",
  "lekiwi_sim",
  "lekiwi_teleoperate",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a meta-package for the workspace, it contains no code itself.
packages = []

[tool.uv.workspace]
members = [
  "packages/*"
]

[tool.pyright]
include = [
  "packages/*",
]

[tool.uv.sources]
lekiwi_lerobot = { workspace = true }
lekiwi_sim = { workspace = true }
lekiwi_teleoperate = { workspace = true }
